# aws-datalake-analytics

./: .gitignore  pyproject.toml
docs/: data-model.md  design_decisions.md
src/aws_datalake_analytics/raw_to_bronze/: orders.py
