[project]
name = "aws-datalake-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Caron",email = "felipe.caronap@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "aws_datalake_analytics", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
